--- a/v3.x.x/main/autopatcher/autopatcher.csproj
+++ b/v3.x.x/main/autopatcher/autopatcher.csproj
@@ -62,7 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Resources\Configuration.ini" />
+    <None Include="Resources\Configuration.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
