--- a/v3.x.x/main/autopatcher/autopatcher.csproj
+++ b/v3.x.x/main/autopatcher/autopatcher.csproj
@@ -62,9 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Resources\Configuration.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Resources\Configuration.ini" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
